qmlformat: fix handling of "if else" inside "if" in "if else"

Fixes: QTBUG-86060
Change-Id: I7a191c451793bf4e1f6a2bd02ceb36b5957136c2
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>