tests/auto/qml/qmlformat/data/nestedIf.formatted.qml
@@ -25,5 +25,12 @@ Item {
                 x();
             }
         }
+        if (x && y)
+            if (x < y)
+                return 0;
+            else
+                return -1;
+        else
+            return y;
     }
 }
