tests/auto/qml/qmlformat/data/nestedIf.qml
@@ -26,5 +26,13 @@ Component.onCompleted: {
              x();
        }
     }
+
+    if (x && y)
+        if (x < y)
+            return 0;
+        else
+            return -1;
+    else
+        return y;
 }
 }
